Apply translation memory

--- a/l10n/po/ja_JP/README.md.po
+++ b/l10n/po/ja_JP/README.md.po
@@ -194,7 +194,7 @@ msgstr ""
 #: upstream/README.md:66
 #, no-wrap
 msgid "Contributing"
-msgstr ""
+msgstr "貢献"
 
 #. type: Plain text
 #: upstream/README.md:69
