--- a/l10n/po/ja_JP/_versions/1.7/guides/grpc.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.7/guides/grpc.adoc.po
@@ -23,47 +23,47 @@ msgstr ""
 #: upstream/_versions/1.7/guides/grpc.adoc:6
 #, no-wrap
 msgid "Quarkus gRPC"
-msgstr ""
+msgstr "Quarkus gRPC"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/grpc.adoc:13
 msgid "https://grpc.io/[gRPC] is a high-performance RPC framework.  It can efficiently connect services implemented using various languages and frameworks.  It is also applicable in the last mile of distributed computing to connect devices, mobile applications, and browsers to backend services."
-msgstr ""
+msgstr "link:https://grpc.io/[gRPC] は高性能なRPCフレームワークです。様々な言語やフレームワークを使って実装されたサービスを効率的に接続することができます。また、デバイスやモバイルアプリケーション、ブラウザとバックエンドサービスを接続するために、分散コンピューティングのラストワンマイルにも適用可能です。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/grpc.adoc:16
 msgid "In general, gRPC uses HTTP/2, TLS, and https://developers.google.com/protocol-buffers[Protobuf (Protocol Buffers)].  In a microservice architecture, gRPC is an efficient, type-safe alternative to HTTP."
-msgstr ""
+msgstr "一般的に、gRPCはHTTP/2、TLS、 link:https://developers.google.com/protocol-buffers[Protobuf(プロトコルバッファ)] を使用します。マイクロサービスアーキテクチャでは、gRPCはHTTPに代わる効率的で型安全な代替手段です。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/grpc.adoc:19
 msgid "The Quarkus gRPC extension integrate gRPC in Quarkus application.  It:"
-msgstr ""
+msgstr "QuarkusのgRPCエクステンションは、QuarkusアプリケーションにgRPCを統合します。それは"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/grpc.adoc:21
 msgid "supports implementing gRPC services"
-msgstr ""
+msgstr "gRPCサービスの実装をサポートしています"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/grpc.adoc:22
 msgid "supports consuming gRPC services"
-msgstr ""
+msgstr "gRPC サービスの利用をサポートしています"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/grpc.adoc:23
 msgid "integrates with the reactive engine from Quarkus as well as the reactive development model"
-msgstr ""
+msgstr "Quarkusのリアクティブエンジンやリアクティブ開発モデルと統合されています"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/grpc.adoc:24
 msgid "allows plain-text communication as well as TLS, and TLS with mutual authentication"
-msgstr ""
+msgstr "平文通信に加えてTLS、相互認証付きのTLSも可能です"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/grpc.adoc:26
 msgid "Quarkus gRPC is based on https://vertx.io/docs/vertx-grpc/java/[Vert.x gRPC]."
-msgstr ""
+msgstr "Quarkus gRPCは link:https://vertx.io/docs/vertx-grpc/java/[Vert.x gRPC] をベースにしています。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/grpc.adoc:28
