--- a/l10n/po/ja_JP/_versions/1.7/guides/index2.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.7/guides/index2.adoc.po
@@ -230,7 +230,7 @@ msgstr ""
 #: upstream/_versions/1.7/guides/index2.adoc:62
 #, no-wrap
 msgid "Contributing"
-msgstr ""
+msgstr "貢献"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/index2.adoc:65
