--- a/l10n/po/ja_JP/_versions/1.7/guides/topic/community.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.7/guides/topic/community.adoc.po
@@ -30,12 +30,15 @@ msgid ""
 "permalink: /community/\n"
 "---\n"
 msgstr ""
+"layout: community\n"
+"permalink: /community/\n"
+"---\n"
 
 #. type: Title =
 #: upstream/_versions/1.7/guides/topic/community.adoc:6
 #, no-wrap
 msgid "{project-name} - Community"
-msgstr ""
+msgstr "{project-name} - コミュニティ"
 
 #. type: Title ==
 #: upstream/_versions/1.7/guides/topic/community.adoc:8
@@ -47,7 +50,7 @@ msgstr ""
 #: upstream/_versions/1.7/guides/topic/community.adoc:10
 #, no-wrap
 msgid "Documentation"
-msgstr ""
+msgstr "ドキュメント"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/topic/community.adoc:14
@@ -58,13 +61,13 @@ msgstr ""
 #: upstream/_versions/1.7/guides/topic/community.adoc:15
 #, no-wrap
 msgid "Discussions"
-msgstr ""
+msgstr "ディスカッション"
 
 #. type: Labeled list
 #: upstream/_versions/1.7/guides/topic/community.adoc:17
 #, no-wrap
 msgid "Stack Overflow"
-msgstr ""
+msgstr "Stack Overflow"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/topic/community.adoc:20
@@ -75,7 +78,7 @@ msgstr ""
 #: upstream/_versions/1.7/guides/topic/community.adoc:21
 #, no-wrap
 msgid "Mailing list"
-msgstr ""
+msgstr "メーリングリスト"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/topic/community.adoc:23
@@ -91,35 +94,35 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/topic/community.adoc:27
 msgid "If you prefer live chat with the developers, we have a {quarkus-chat-url}[Zulip chat] where we all hang out."
-msgstr ""
+msgstr "開発者とのライブチャットがお好きな方は、{quarkus-chat-url}[Zulip chat]をご利用ください。"
 
 #. type: Title ==
 #: upstream/_versions/1.7/guides/topic/community.adoc:28
 #, no-wrap
 msgid "Publications"
-msgstr ""
+msgstr "出版物"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/topic/community.adoc:31
 msgid "We are actively collection interesting blogs, articles, videos and other interesting publications. You can find those on link:{quarkus-site-publications}[Publications] page."
-msgstr ""
+msgstr "私たちは積極的に面白いブログ、記事、ビデオ、その他の興味深い出版物を収集しています。あなたは、 link:{quarkus-site-publications}[出版物] のページでそれらを見つけることができます。"
 
 #. type: Title ==
 #: upstream/_versions/1.7/guides/topic/community.adoc:32
 #, no-wrap
 msgid "An Open Project"
-msgstr ""
+msgstr "オープンプロジェクト"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/topic/community.adoc:35
 msgid "{project-name} is an Open Source project licensed under the https://www.apache.org/licenses/LICENSE-2.0[Apache License version 2.0]. First and foremost, it is an open community where contributions, ideas and discussions are done in the open and welcome contributors. Let's join forces in building the future of Java applications."
-msgstr ""
+msgstr "{project-name} は link:https://www.apache.org/licenses/LICENSE-2.0[Apacheライセンスバージョン2.0] でライセンスされたオープンソースプロジェクトです。まず何よりも、貢献やアイデア、議論がオープンに行われ、貢献者を歓迎するオープンコミュニティです。力を合わせて、Javaアプリケーションの未来を築いていきましょう。"
 
 #. type: Title ==
 #: upstream/_versions/1.7/guides/topic/community.adoc:36
 #, no-wrap
 msgid "Code and issue tracker"
-msgstr ""
+msgstr "コードと課題管理システム"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/topic/community.adoc:39
@@ -130,32 +133,32 @@ msgstr ""
 #: upstream/_versions/1.7/guides/topic/community.adoc:41
 #, no-wrap
 msgid "Contributing"
-msgstr ""
+msgstr "貢献"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/topic/community.adoc:44
 msgid "There are a lot of ways to contribute to {project-name} development:"
-msgstr ""
+msgstr "{project-name} の開発に貢献する方法はたくさんあります。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/topic/community.adoc:46
 msgid "Writing documentation and quickstarts,"
-msgstr ""
+msgstr "ドキュメントやクイックスタートを書いたり、"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/topic/community.adoc:47
 msgid "{quarkus-issues-url}[Fixing bugs or even just opening an issue],"
-msgstr ""
+msgstr "{quarkus-issues-url}[バグを修正したり、Issueを登録するだけでも構いません]。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/topic/community.adoc:48
 msgid "Writing new extensions."
-msgstr ""
+msgstr "新しいエクステンションの作成"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/topic/community.adoc:50
 msgid "If you are an extension developer or want to contribute to {project-name} development, join our mailing list either:"
-msgstr ""
+msgstr "もしあなたがエクステンションの開発者であったり、{project-name}の開発に貢献したい場合は、私たちのメーリングリストに参加してください:"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/topic/community.adoc:52
@@ -165,9 +168,9 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/topic/community.adoc:53
 msgid "by visiting the Google Groups page {quarkus-mailing-list-index}"
-msgstr ""
+msgstr "Googleグループのページ{quarkus-mailing-list-index}にアクセス"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/topic/community.adoc:54
 msgid "Make sure you visit our extensive link:{quarkus-writing-extensions-guide}[extension developer guide]."
-msgstr ""
+msgstr "当社の広範な link:{quarkus-writing-extensions-guide}[エクステンション開発者ガイド] を必ずご覧ください。"
