--- a/l10n/po/ja_JP/_versions/1.7/guides/transaction.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.7/guides/transaction.adoc.po
@@ -28,7 +28,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/transaction.adoc:14
 msgid "Quarkus comes with a Transaction Manager and uses it to coordinate and expose transactions to your applications.  Each extension dealing with persistence will integrate with it for you.  And you will explicitly interact with transactions via CDI.  This guide will walk you through all that."
-msgstr ""
+msgstr "QuarkusにはTransaction Managerが付属しており、これを使用してトランザクションを調整してアプリケーションに公開します。永続性を扱う各エクステンションは、これと統合されます。そして、CDIを介して明示的にトランザクションと対話することになります。このガイドでは、これらすべてについて説明します。"
 
 #. type: Title ==
 #: upstream/_versions/1.7/guides/transaction.adoc:15
@@ -39,12 +39,12 @@ msgstr "設定"
 #. type: Plain text
 #: upstream/_versions/1.7/guides/transaction.adoc:19
 msgid "You don't need to worry about setting it up most of the time as extensions needing it will simply add it as a dependency.  Hibernate ORM for example will include the transaction manager and set it up properly."
-msgstr ""
+msgstr "これを必要とするエクステンションは単に依存関係として追加するだけなので、ほとんどの場合、設定について心配する必要はありません。例えばHibernate ORMはトランザクションマネージャーを含んでおり、適切に設定してくれます。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/transaction.adoc:22
 msgid "You might need to add it as a dependency explicitly if you are using transactions directly without Hibernate ORM for example.  Add the following to your `pom.xml`:"
-msgstr ""
+msgstr "例えば、Hibernate ORMを使用せずに直接トランザクションを使用している場合は、明示的に依存関係として追加する必要があるかもしれません。以下を `pom.xml` に追加します:"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/transaction.adoc:29
@@ -60,12 +60,12 @@ msgstr ""
 #: upstream/_versions/1.7/guides/transaction.adoc:31
 #, no-wrap
 msgid "Starting and stopping transactions: defining your boundaries"
-msgstr ""
+msgstr "トランザクションの開始と停止:境界線の定義"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/transaction.adoc:34
 msgid "You can define your transaction boundaries the easy way, or the less easy way :)"
-msgstr ""
+msgstr "トランザクションの境界を定義するには、簡単な方法と比較的簡単ではない方法があります :)"
 
 #. type: Title ===
 #: upstream/_versions/1.7/guides/transaction.adoc:35
@@ -76,7 +76,7 @@ msgstr "宣言的アプローチ"
 #. type: Plain text
 #: upstream/_versions/1.7/guides/transaction.adoc:38
 msgid "The easiest way to define your transaction boundaries is to use the `@Transactional` annotation on your entry method (`javax.transaction.Transactional`)."
-msgstr ""
+msgstr "トランザクションの境界を定義する最も簡単な方法は、エントリーメソッド ( `javax.transaction.Transactional` ) で `@Transactional` アノテーションを使用することです。"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/transaction.adoc:43
@@ -117,52 +117,52 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/transaction.adoc:62
 msgid "This annotation defines your transaction boundaries and will wrap this call within a transaction."
-msgstr ""
+msgstr "このアノテーションは、トランザクションの境界を定義し、トランザクション内でこの呼び出しをラップします。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/transaction.adoc:63
 msgid "A `RuntimeException` crossing the transaction boundaries will rollback the transaction."
-msgstr ""
+msgstr "`RuntimeException` がトランザクションの境界を越えると、トランザクションがロールバックされます。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/transaction.adoc:66
 msgid "`@Transactional` can be used to control transaction boundaries on any CDI bean at the method level or at the class level to ensure every method is transactional.  That includes REST endpoints."
-msgstr ""
+msgstr "`@Transactional` は、メソッドレベルまたはクラスレベルで、すべてのメソッドがトランザクションであることを保証するために、任意の CDI Bean のトランザクション境界を制御するために使用することができます。これにはRESTエンドポイントも含まれます。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/transaction.adoc:68
 msgid "You can control whether and how the transaction is started with parameters on `@Transactional`:"
-msgstr ""
+msgstr "`@Transactional` のパラメーターを使用して、トランザクションを開始するかどうか、どのように開始するかを制御することができます。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/transaction.adoc:70
 msgid "`@Transactional(REQUIRED)` (default): starts a transaction if none was started, stays with the existing one otherwise."
-msgstr ""
+msgstr "`@Transactional(REQUIRED)` (デフォルト): 何も開始されていない場合はトランザクションを開始し、そうでない場合は既存のトランザクションを維持します。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/transaction.adoc:71
 msgid "`@Transactional(REQUIRES_NEW)`: starts a transaction if none was started ; if an existing one was started, suspends it and starts a new one for the boundary of that method."
-msgstr ""
+msgstr "`@Transactional(REQUIRES_NEW)` : 何も開始されていない場合はトランザクションを開始し、既存のトランザクションが開始されている場合はそれを一時停止し、そのメソッドの境界で新しいトランザクションを開始します。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/transaction.adoc:72
 msgid "`@Transactional(MANDATORY)`: fails if no transaction was started ; works within the existing transaction otherwise."
-msgstr ""
+msgstr "`@Transactional(MANDATORY)` : トランザクションが開始されていない場合は失敗し、そうでない場合は既存のトランザクション内で動作します。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/transaction.adoc:73
 msgid "`@Transactional(SUPPORTS)`: if a transaction was started, joins it ; otherwise works with no transaction."
-msgstr ""
+msgstr "`@Transactional(SUPPORTS)` : トランザクションが開始されている場合、それに参加します。開始されていない場合はトランザクションなしで動作します。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/transaction.adoc:74
 msgid "`@Transactional(NOT_SUPPORTED)`: if a transaction was started, suspends it and works with no transaction for the boundary of the method ; otherwise works with no transaction."
-msgstr ""
+msgstr "`@Transactional(NOT_SUPPORTED)` : トランザクションが開始されている場合、それを一時停止し、メソッドの境界ではトランザクションなしで動作します。開始されていない場合は、トランザクションなしで動作します。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/transaction.adoc:75
 msgid "`@Transactional(NEVER)`: if a transaction was started, raises an exception ; otherwise works with no transaction."
-msgstr ""
+msgstr "`@Transactional(NEVER)` : トランザクションが開始されている場合は例外を発生させます。開始されていない場合はトランザクションなしで動作します。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/transaction.adoc:79
@@ -220,7 +220,7 @@ msgstr ""
 #: upstream/_versions/1.7/guides/transaction.adoc:114
 #, no-wrap
 msgid "Transaction Configuration"
-msgstr ""
+msgstr "トランザクション設定"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/transaction.adoc:117
@@ -246,7 +246,7 @@ msgstr ""
 #: upstream/_versions/1.7/guides/transaction.adoc:126
 #, no-wrap
 msgid "Reactive extensions"
-msgstr ""
+msgstr "リアクティブエクステンション"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/transaction.adoc:129
@@ -342,13 +342,13 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/transaction.adoc:185
 msgid "The default value is 60 seconds."
-msgstr ""
+msgstr "デフォルト値は60秒です。"
 
 #. type: Title ==
 #: upstream/_versions/1.7/guides/transaction.adoc:186
 #, no-wrap
 msgid "Configuring transaction node name identifier"
-msgstr ""
+msgstr "トランザクションノード名識別子の設定"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/transaction.adoc:190
@@ -374,7 +374,7 @@ msgstr ""
 #: upstream/_versions/1.7/guides/transaction.adoc:202
 #, no-wrap
 msgid "Why always having a transaction manager?"
-msgstr ""
+msgstr "なぜ常にトランザクションマネージャーを持っているのか?"
 
 #. type: Labeled list
 #: upstream/_versions/1.7/guides/transaction.adoc:204
