--- a/l10n/po/ja_JP/_versions/1.11/guides/websockets.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.11/guides/websockets.adoc.po
@@ -70,7 +70,7 @@ msgstr "アーキテクチャ"
 #. type: Plain text
 #: upstream/_versions/1.11/guides/websockets.adoc:27
 msgid "In this guide, we create a straightforward chat application using web sockets to receive and send messages to the other connected users."
-msgstr ""
+msgstr "このガイドでは、WebSocketを使用して、接続されている他のユーザーとメッセージを送受信するための簡単なチャットアプリケーションを作成します。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/websockets.adoc:29
@@ -327,7 +327,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/websockets.adoc:159
 msgid "Send and receive messages"
-msgstr ""
+msgstr "メッセージの送受信"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/websockets.adoc:161
