--- a/l10n/po/ja_JP/_versions/1.7/guides/topic/publications.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.7/guides/topic/publications.adoc.po
@@ -30,19 +30,22 @@ msgid ""
 "permalink: /publications/\n"
 "---\n"
 msgstr ""
+"layout: publications\n"
+"permalink: /publications/\n"
+"---\n"
 
 #. type: Title =
 #: upstream/_versions/1.7/guides/topic/publications.adoc:6
 #, no-wrap
 msgid "{project-name} - Publications"
-msgstr ""
+msgstr "{project-name} - 出版物"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/topic/publications.adoc:9
 msgid "Below is a list of articles, blogs, podcast and other tidbits published online around {project-name}."
-msgstr ""
+msgstr "以下は、{project-name}関連でオンラインで公開されている記事、ブログ、ポッドキャスト、その他の豆知識のリストです。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/topic/publications.adoc:10
 msgid "If you believe we are missing an article, blog or video https://github.com/quarkusio/quarkusio.github.io[submit an issue]."
-msgstr ""
+msgstr "記事、ブログ、ビデオが不足していると思われる場合は、 link:https://github.com/quarkusio/quarkusio.github.io[Issueを登録] してください。"
