Apply translation memory

--- a/l10n/po/ja_JP/_versions/1.11/guides/funqy-gcp-functions.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.11/guides/funqy-gcp-functions.adoc.po
@@ -49,7 +49,7 @@ msgstr "このガイドを完成させるには、以下が必要です:"
 #. type: Plain text
 #: upstream/_versions/1.11/guides/funqy-gcp-functions.adoc:22
 msgid "less than 30 minutes"
-msgstr ""
+msgstr "三十分以内"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/funqy-gcp-functions.adoc:23
@@ -200,12 +200,12 @@ msgstr ""
 #: upstream/_versions/1.11/guides/funqy-gcp-functions.adoc:90
 #, no-wrap
 msgid "Build and Deploy"
-msgstr ""
+msgstr "ビルドとデプロイ"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/funqy-gcp-functions.adoc:93
 msgid "Build the project using maven."
-msgstr ""
+msgstr "mavenを使ってプロジェクトをビルドします。"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/funqy-gcp-functions.adoc:97
@@ -216,7 +216,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/funqy-gcp-functions.adoc:100
 msgid "This will compile and package your code."
-msgstr ""
+msgstr "これでコードがコンパイルされ、パッケージ化されます。"
 
 #. type: Title ==
 #: upstream/_versions/1.11/guides/funqy-gcp-functions.adoc:102
