--- a/l10n/po/ja_JP/_versions/1.11/guides/kafka-streams.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.11/guides/kafka-streams.adoc.po
@@ -44,7 +44,7 @@ msgstr "このガイドを完成させるには、以下が必要です:"
 #. type: Plain text
 #: upstream/_versions/1.11/guides/kafka-streams.adoc:17
 msgid "less than 30 minutes"
-msgstr ""
+msgstr "三十分以内"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/kafka-streams.adoc:18
