--- a/l10n/po/ja_JP/_versions/1.7/guides/building-my-first-extension.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.7/guides/building-my-first-extension.adoc.po
@@ -60,7 +60,7 @@ msgstr "このガイドを完成させるには、以下が必要です:"
 #. type: Plain text
 #: upstream/_versions/1.7/guides/building-my-first-extension.adoc:29
 msgid "less than 30 minutes"
-msgstr ""
+msgstr "三十分以内"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/building-my-first-extension.adoc:30
