Apply translation memory

--- a/l10n/po/ja_JP/_versions/1.7/guides/amazon-sns.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.7/guides/amazon-sns.adoc.po
@@ -1173,7 +1173,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/amazon-sns.adoc:633
 msgid "If you want to work with an AWS account, you'd need to set it with:"
-msgstr ""
+msgstr "AWSアカウントで作業したい場合は、次のようにして設定する必要があります。"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/amazon-sns.adoc:637
@@ -1197,13 +1197,13 @@ msgstr ""
 #: upstream/_versions/1.7/guides/amazon-sns.adoc:644
 #, no-wrap
 msgid "Next steps"
-msgstr ""
+msgstr "次のステップ"
 
 #. type: Title ===
 #: upstream/_versions/1.7/guides/amazon-sns.adoc:646
 #, no-wrap
 msgid "Packaging"
-msgstr ""
+msgstr "パッケージング"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/amazon-sns.adoc:650
@@ -1213,18 +1213,18 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/amazon-sns.adoc:653
 msgid "With GraalVM installed, you can also create a native executable binary: `./mvnw clean package -Dnative`.  Depending on your system, that will take some time."
-msgstr ""
+msgstr "GraalVMをインストールした状態で、ネイティブの実行バイナリーを作成することもできます: `./mvnw clean package -Dnative` お使いのシステムにもよりますが、時間がかかります。"
 
 #. type: Title ===
 #: upstream/_versions/1.7/guides/amazon-sns.adoc:654
 #, no-wrap
 msgid "Going asynchronous"
-msgstr ""
+msgstr "非同期にする"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/amazon-sns.adoc:657
 msgid "Thanks to the AWS SDK v2.x used by the Quarkus extension, you can use the asynchronous programming model out of the box."
-msgstr ""
+msgstr "Quarkusのエクステンションで使われているAWS SDK v2.xのおかげで、非同期プログラミングモデルをすぐに使えるようになりました。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/amazon-sns.adoc:659
