--- a/l10n/po/ja_JP/_versions/1.7/guides/neo4j.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.7/guides/neo4j.adoc.po
@@ -734,13 +734,13 @@ msgstr ""
 #: upstream/_versions/1.7/guides/neo4j.adoc:387
 #, no-wrap
 msgid "Next steps"
-msgstr ""
+msgstr "次のステップ"
 
 #. type: Title ===
 #: upstream/_versions/1.7/guides/neo4j.adoc:389
 #, no-wrap
 msgid "Packaging"
-msgstr ""
+msgstr "パッケージング"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/neo4j.adoc:393
@@ -750,7 +750,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/neo4j.adoc:396
 msgid "With GraalVM installed, you can also create a native executable binary: `./mvnw clean package -Dnative`.  Depending on your system, that will take some time."
-msgstr ""
+msgstr "GraalVMをインストールした状態で、ネイティブの実行バイナリーを作成することもできます: `./mvnw clean package -Dnative` お使いのシステムにもよりますが、時間がかかります。"
 
 #. type: Title ===
 #: upstream/_versions/1.7/guides/neo4j.adoc:397
