--- a/l10n/po/ja_JP/_versions/1.11/guides/amazon-kms.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.11/guides/amazon-kms.adoc.po
@@ -436,13 +436,13 @@ msgstr ""
 #: upstream/_versions/1.11/guides/amazon-kms.adoc:214
 #, no-wrap
 msgid "Next steps"
-msgstr ""
+msgstr "次のステップ"
 
 #. type: Title ===
 #: upstream/_versions/1.11/guides/amazon-kms.adoc:216
 #, no-wrap
 msgid "Packaging"
-msgstr ""
+msgstr "パッケージング"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/amazon-kms.adoc:220
@@ -452,18 +452,18 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/amazon-kms.adoc:223
 msgid "With GraalVM installed, you can also create a native executable binary: `./mvnw clean package -Dnative`.  Depending on your system, that will take some time."
-msgstr ""
+msgstr "GraalVMをインストールした状態で、ネイティブの実行バイナリーを作成することもできます: `./mvnw clean package -Dnative` お使いのシステムにもよりますが、時間がかかります。"
 
 #. type: Title ===
 #: upstream/_versions/1.11/guides/amazon-kms.adoc:224
 #, no-wrap
 msgid "Going asynchronous"
-msgstr ""
+msgstr "非同期にする"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/amazon-kms.adoc:227
 msgid "Thanks to the AWS SDK v2.x used by the Quarkus extension, you can use the asynchronous programming model out of the box."
-msgstr ""
+msgstr "Quarkusのエクステンションで使われているAWS SDK v2.xのおかげで、非同期プログラミングモデルをすぐに使えるようになりました。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/amazon-kms.adoc:229
