--- a/l10n/po/ja_JP/_versions/1.7/guides/amazon-s3.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.7/guides/amazon-s3.adoc.po
@@ -723,7 +723,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/amazon-s3.adoc:365
 msgid "And add following dependency to the application `pom.xml`:"
-msgstr ""
+msgstr "そして、以下の依存関係をアプリケーションの `pom.xml` に追加します。"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/amazon-s3.adoc:371
@@ -790,7 +790,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/amazon-s3.adoc:396
 msgid "If you want to work with an AWS account, you'd need to set it with:"
-msgstr ""
+msgstr "AWSアカウントで作業したい場合は、次のようにして設定する必要があります。"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/amazon-s3.adoc:399
@@ -856,13 +856,13 @@ msgstr ""
 #: upstream/_versions/1.7/guides/amazon-s3.adoc:422
 #, no-wrap
 msgid "Next steps"
-msgstr ""
+msgstr "次のステップ"
 
 #. type: Title ===
 #: upstream/_versions/1.7/guides/amazon-s3.adoc:424
 #, no-wrap
 msgid "Packaging"
-msgstr ""
+msgstr "パッケージング"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/amazon-s3.adoc:428
@@ -872,18 +872,18 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/amazon-s3.adoc:431
 msgid "With GraalVM installed, you can also create a native executable binary: `./mvnw clean package -Dnative`.  Depending on your system, that will take some time."
-msgstr ""
+msgstr "GraalVMをインストールした状態で、ネイティブの実行バイナリーを作成することもできます: `./mvnw clean package -Dnative` お使いのシステムにもよりますが、時間がかかります。"
 
 #. type: Title ===
 #: upstream/_versions/1.7/guides/amazon-s3.adoc:432
 #, no-wrap
 msgid "Going asynchronous"
-msgstr ""
+msgstr "非同期にする"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/amazon-s3.adoc:435
 msgid "Thanks to the AWS SDK v2.x used by the Quarkus extension, you can use the asynchronous programming model out of the box."
-msgstr ""
+msgstr "Quarkusのエクステンションで使われているAWS SDK v2.xのおかげで、非同期プログラミングモデルをすぐに使えるようになりました。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/amazon-s3.adoc:437
