--- a/l10n/stats/translation.csv
+++ b/l10n/stats/translation.csv
@@ -1,4 +1,5 @@
 Filename, Fuzzy Messages, Total Messages, Fuzzy Words, Total Words, Achievement
+l10n/po/ja_JP/_posts/2021-03-04-path-resolution-in-quarkus.adoc.po, 0, 83, 0, 1697 ,100%
 l10n/po/ja_JP/_posts/2021-03-03-quarkus-1-12-1-final-released.adoc.po, 0, 15, 0, 145 ,100%
 l10n/po/ja_JP/_posts/2021-02-23-quarkus-1-12-0-final-released.adoc.po, 0, 54, 0, 764 ,100%
 l10n/po/ja_JP/_posts/2021-02-17-intellij-quarkus-tools-1.4.0.adoc.po, 0, 12, 0, 112 ,100%
