Translate tooling.adoc.po

--- a/l10n/po/ja_JP/_guides/tooling.adoc.po
+++ b/l10n/po/ja_JP/_guides/tooling.adoc.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: 2021-03-03 16:17+0000\n"
-"PO-Revision-Date: 2021-02-13 12:09+0900\n"
+"PO-Revision-Date: 2021-03-09 22:04+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: ja\n"
@@ -27,16 +27,13 @@ msgstr "Quarkus - ツールの使用"
 
 #. type: Plain text
 #: upstream/_guides/tooling.adoc:11
-#, fuzzy
-#| msgid "Quarkus comes with a toolchain enabling developers from live reload all the way down to deploying a Kubernetes application.  In this guide, we will explore:"
 msgid "Quarkus comes with a toolchain enabling developers from live reload all the way down to deploying a Kubernetes application. In addition there are plugins and extensions to all major IDEs."
-msgstr "Quarkus には、開発者がライブリーロードから Kubernetes アプリケーションのデプロイまでを可能にするツールチェーンが付属しています。このガイドでは、以下を見ていきます。"
+msgstr "Quarkus には、開発者がライブリロードから Kubernetes アプリケーションのデプロイまでを可能にするツールチェーンが付属しています。加えて、全ての主要なIDEに対するプラグインも存在します。"
 
 #. type: Plain text
 #: upstream/_guides/tooling.adoc:13
-#, fuzzy
 msgid "In this guide, we will explore:"
-msgstr "このガイドでは、探求していきます。"
+msgstr "このガイドでは、以下をみていきます:"
 
 #. type: Plain text
 #: upstream/_guides/tooling.adoc:15
@@ -50,10 +47,8 @@ msgstr "ビルドツールとしての link:gradle-tooling[Gradle] の使い方"
 
 #. type: Plain text
 #: upstream/_guides/tooling.adoc:17
-#, fuzzy
-#| msgid "how to use the native CLI for your toolchain (coming soon)"
 msgid "how to use the CLI for your toolchain (coming soon)"
-msgstr "ツールチェインにネイティブ CLI を使用する方法 (近日公開)"
+msgstr "ツールチェインとしてネイティブ CLI を使用する方法 (近日公開)"
 
 #. type: Plain text
 #: upstream/_guides/tooling.adoc:18
@@ -82,7 +77,6 @@ msgstr "アプリケーションをネイティブコンパイルする方法"
 
 #. type: Plain text
 #: upstream/_guides/tooling.adoc:23
-#, fuzzy
 msgid "how to setup Quarkus tools in link:ide-tooling[Visual Studio Code, Eclipse IDE, Eclipse Che and IntelliJ]"
 msgstr "link:ide-tooling[Visual Studio Code、Eclipse IDE、Eclipse Che、IntelliJ]でQuarkusツールを設定する方法"
 
@@ -94,8 +88,6 @@ msgstr "ビルドツールの選択"
 
 #. type: Plain text
 #: upstream/_guides/tooling.adoc:30
-#, fuzzy
-#| msgid "Quarkus comes with a toolchain to help you at all development stages.  You can use Maven or Gradle as build tool.  And we offer a native CLI that is convenient to use (coming soon)."
 msgid "Quarkus comes with a toolchain to help you at all development stages.  You can use Maven or Gradle as build tool.  And we offer a CLI that is convenient to use (coming soon)."
 msgstr "Quarkus には、すべての開発段階で役立つツールチェーンが付属しています。ビルドツールとして Maven や Gradle を使うことができます。また、使い勝手の良いネイティブ CLI も提供しています (近日公開予定)。"
 
@@ -112,7 +104,6 @@ msgstr "link:gradle-tooling[Gradle]"
 
 #. type: Plain text
 #: upstream/_guides/tooling.adoc:34
-#, fuzzy
 #| msgid "link:gradle-tooling[Gradle]"
 msgid "link:ide-tooling[IDE]"
-msgstr "link:gradle-tooling[Gradle]"
+msgstr "link:ide-tooling[IDE]"
