--- a/l10n/po/ja_JP/_guides/writing-extensions.adoc.po
+++ b/l10n/po/ja_JP/_guides/writing-extensions.adoc.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: 2021-03-06 16:10+0000\n"
-"PO-Revision-Date: 2021-02-27 11:48+0900\n"
+"PO-Revision-Date: 2021-03-09 22:12+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: ja\n"
@@ -1052,7 +1052,7 @@ msgstr ""
 msgid "The `name` parameter of the mojo is optional.  If you do not specify it on the command line, the plugin will derive it from `extensionId` by replacing dashes with spaces and uppercasing each token.  So you may consider omitting explicit `name` in some cases."
 msgstr "mojo の `nameBase` パラメータはオプションです。コマンドラインで指定しなかった場合、プラグインはダッシュをスペースに置き換え、各トークンを大文字にすることで `artifactIdBase` からそれを導き出します。そのため、場合によっては明示的な `nameBase` を省略することを検討してもよいでしょう。"
 
-#.  The following link should point to the mojo page once https://github.com/quarkusio/quarkusio.github.io/issues/265 is fixed
+#. The following link should point to the mojo page once https://github.com/quarkusio/quarkusio.github.io/issues/265 is fixed
 #. type: Plain text
 #: upstream/_guides/writing-extensions.adoc:536
 #, fuzzy
@@ -5866,25 +5866,21 @@ msgstr "これについてのコメントをいくつか。"
 
 #. type: Plain text
 #: upstream/_guides/writing-extensions.adoc:2931
-#, fuzzy
 msgid "Every time you will need the indentation to be respected in the Javadoc comment (think list items spread on multiple lines or indented source code), you will need to disable temporarily the automatic Eclipse formatter (this, even if you don't use Eclipse as the formatter is included in our build).  To do so, use the `// @formatter:off`/`// @formatter:on` markers.  Note the fact that they are separate comments and there is a space after the `//` marker. This is required."
-msgstr "Javadocのコメントでインデントを尊重する必要がある場合（複数行にまたがるリスト項目やインデントされたソースコードを考えてみてください）には、Eclipseの自動フォーマッタを一時的に無効にする必要があります（これは、私たちのビルドにはフォーマッタが含まれているので、Eclipseを使用していない場合でも同様です）。これを行うには、 `// @formatter:off` / `// @formatter:on` マーカーを使用してください。これらは別々のコメントであり、 `//` マーカーの後にスペースがあることに注意してください。これは必須です。"
+msgstr "Javadocのコメントでインデントを尊重する必要がある場合（複数行にまたがるリスト項目やインデントされたソースコードを考えてみてください）には、Eclipseの自動フォーマッタを一時的に無効にする必要があります（これはEclipseを使用していない場合でも同様です。私たちのビルドにはフォーマッタが含まれている為です）。これを行うには、 `// @formatter:off` / `// @formatter:on` マーカーを使用してください。これらは別々のコメントであり、 `//` マーカーの後にスペースがあることに注意してください。これは必須です。"
 
 #. type: Plain text
 #: upstream/_guides/writing-extensions.adoc:2932
-#, fuzzy
 msgid "As you can see, you can use the full power of Asciidoctor (except for the limitation below)"
-msgstr "見ての通り、アッシドクトールのフルパワーが使えます（以下の制限を除く）。"
+msgstr "見ての通り、Asciidoctorのフルパワーが使えます（以下の制限を除く）"
 
 #. type: delimited block =
 #: upstream/_guides/writing-extensions.adoc:2937
-#, fuzzy
 msgid "You cannot use open blocks (`--`) in your Asciidoctor documentation.  All the other types of blocks (source, admonitions...) are supported."
 msgstr "Asciidoctor のドキュメントでは、オープンブロック ( `--` ) を使用することはできません。他のすべてのタイプのブロック (ソース、アドミッション...) がサポートされています。"
 
 #. type: delimited block =
 #: upstream/_guides/writing-extensions.adoc:2944
-#, fuzzy
 msgid "By default, the doc generator will use the hyphenated field name as the key of a `java.util.Map` configuration item.  To override this default and have a user friendly key (independent of implementation details), you may use the `io.quarkus.runtime.annotations.ConfigDocMapKey` annotation.  See the following example,"
 msgstr "デフォルトでは、doc ジェネレータは `java.util.Map` 設定項目のキーとしてハイフンで囲まれたフィールド名を使用します。このデフォルトを上書きして（実装の詳細とは無関係に）ユーザーフレンドリーなキーを持つためには、 `io.quarkus.runtime.annotations.ConfigDocMapKey` アノテーションを使用することができます。以下の例を参照してください。"
 
@@ -5905,9 +5901,8 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/writing-extensions.adoc:2958
-#, fuzzy
 msgid "This will generate a configuration map key named `quarkus.some.\"cache-name\"` instead of `quarkus.some.\"namespace\"`."
-msgstr "これにより、 `quarkus.some.\"namespace\"` の代わりに `quarkus.some.\"cache-name\"` という名前の構成マップキーが生成されます。"
+msgstr "これにより、 `quarkus.some.\"namespace\"` の代わりに `quarkus.some.\"cache-name\"` という名前の設定マップキーが生成されます。"
 
 #. type: Title ===
 #: upstream/_guides/writing-extensions.adoc:2960
@@ -6005,21 +6000,18 @@ msgstr "例えば、 `io.quarkus.vertx.http.runtime.FormAuthConfig` 設定グル
 
 #. type: Plain text
 #: upstream/_guides/writing-extensions.adoc:3009
-#, fuzzy
 msgid "A few recommendations:"
-msgstr "お勧めをいくつか。"
+msgstr "幾つかの推奨事項:"
 
 #. type: Plain text
 #: upstream/_guides/writing-extensions.adoc:3011
-#, fuzzy
 msgid "`opts=optional` is mandatory as we don't want the build to fail if only part of the configuration documentation has been generated"
 msgstr "`opts=optional` は、設定ドキュメントの一部しか生成されていない場合にビルドを失敗させたくないので必須です。"
 
 #. type: Plain text
 #: upstream/_guides/writing-extensions.adoc:3014
-#, fuzzy
 msgid "The documentation is generated with a title level of 2 (i.e. `==`).  You usually need to adjust it.  It can be done with `leveloffset=+N`."
-msgstr "ドキュメントはタイトルレベルが2(例: `==` )で生成されます。通常はこれを調整する必要があります。これは `leveloffset=+N` ."
+msgstr "ドキュメントはタイトルレベルが2(例: `==` )で生成されます。通常はこれを調整する必要があります。これは `leveloffset=+N` で行うことが可能です。"
 
 #. type: Plain text
 #: upstream/_guides/writing-extensions.adoc:3017
@@ -6043,9 +6035,8 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/writing-extensions.adoc:3027
-#, fuzzy
 msgid "Then, at the end of your documentation, include the extensive documentation:"
-msgstr "そして、文書の最後には、広範な文書を含めてください。"
+msgstr "そして、文書の最後には、エクステンションのドキュメントをインクルードしてください。"
 
 #. type: delimited block -
 #: upstream/_guides/writing-extensions.adoc:3031
