--- a/l10n/po/ja_JP/_guides/security-customization.adoc.po
+++ b/l10n/po/ja_JP/_guides/security-customization.adoc.po
@@ -3,37 +3,36 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "POT-Creation-Date: 2021-02-05 12:05+0900\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2021-03-09 23:10+0900\n"
+"Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"X-Generator: Poedit 2.4.2\n"
 
 #. This guide is maintained in the main Quarkus repository
 #. and pull requests should be submitted there:
 #. https://github.com/quarkusio/quarkus/tree/master/docs/src/main/asciidoc
 #. type: Title =
 #: upstream/_guides/security-customization.adoc:6
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Quarkus - Security Tips and Tricks"
 msgstr "Quarkus - セキュリティーのヒントとコツ"
 
 #. type: Title ==
 #: upstream/_guides/security-customization.adoc:10
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "HttpAuthenticationMechanism Customization"
 msgstr "HttpAuthenticationMechanism のカスタマイズ"
 
 #. type: Plain text
 #: upstream/_guides/security-customization.adoc:14
-#, fuzzy
 msgid "One can customize `HttpAuthenticationMechanism` by registering a CDI implementation bean.  In the example below the custom authenticator delegates to `JWTAuthMechanism` provided by `quarkus-smallrye-jwt`:"
 msgstr "CDI実装Beanを登録することで、 `HttpAuthenticationMechanism` をカスタマイズすることができます。以下の例では、カスタム認証機能は `quarkus-smallrye-jwt` によって提供される `JWTAuthMechanism` にデリゲートします。"
 
@@ -110,15 +109,14 @@ msgstr ""
 
 #. type: Title ==
 #: upstream/_guides/security-customization.adoc:52
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Security Identity Customization"
 msgstr "セキュリティー・アイデンティティのカスタマイズ"
 
 #. type: Plain text
 #: upstream/_guides/security-customization.adoc:55
-#, fuzzy
 msgid "Internally, the identity providers create and update an instance of the `io.quarkus.security.identity.SecurityIdentity` class which holds the principal, roles, credentials which were used to authenticate the client (user) and other security attributes. An easy option to customize `SecurityIdentity` is to register a custom `SecurityIdentityAugmentor`. For example, the augmentor below adds an addition role:"
-msgstr "内部的には、ID プロバイダは、プリンシパル、役割、クライアント(ユーザー)の認証に使用されたクレデンシャル、 およびその他のセキュリティー属性を保持する `io.quarkus.security.identity.SecurityIdentity` クラスのインスタンスを作成して更新します。 `SecurityIdentity` をカスタマイズする簡単なオプションは、カスタム `SecurityIdentityAugmentor` を登録することです。例えば、以下のエクステンションは、追加のロールを追加します。"
+msgstr "内部的には、アイデンティティ・プロバイダは、プリンシパル、役割、クライアント(ユーザー)の認証に使用されたクレデンシャル、 およびその他のセキュリティー属性を保持する `io.quarkus.security.identity.SecurityIdentity` クラスのインスタンスを作成して更新します。 `SecurityIdentity` をカスタマイズする簡単なオプションは、カスタム `SecurityIdentityAugmentor` を登録することです。例えば、以下のエクステンションは、追加のロールを追加します。"
 
 #. type: delimited block -
 #: upstream/_guides/security-customization.adoc:63
@@ -192,9 +190,8 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/security-customization.adoc:94
-#, fuzzy
 msgid "Here is another example showing how to use the client certificate available in the current link:security-built-in-authentication#mutual-tls[Mutual TLS] request to add more roles:"
-msgstr "ここでは、現在の link:security-built-in-authentication#mutual-tls[相互TLS] リクエストで利用可能なクライアント証明書を使用して、より多くのロールを追加する方法を示す別の例を示します。"
+msgstr "ここでは、現在の link:security-built-in-authentication#mutual-tls[相互TLS] リクエストで利用可能なクライアント証明書を使用して、より多くのロールを追加する方法を示すもう一つの例を示します。"
 
 #. type: delimited block -
 #: upstream/_guides/security-customization.adoc:104
@@ -275,30 +272,32 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/security-customization.adoc:144
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "===\n"
-msgstr "==="
+msgstr "===\n"
 
 #. type: Plain text
 #: upstream/_guides/security-customization.adoc:147
-#, fuzzy, no-wrap
+#, no-wrap
 msgid ""
 "If more than one custom `SecurityIdentityAugmentor` is registered then they will be considered equal candidates and invoked in random order.\n"
 "You can enforce the order by implementing a default `SecurityIdentityAugmentor#priority` method. Augmentors with higher priorities will be invoked first.\n"
 "===\n"
-msgstr "複数のカスタム `SecurityIdentityAugmentor` が登録されている場合、それらは同等の候補とみなされ、ランダムな順序で呼び出されます。デフォルトの `SecurityIdentityAugmentor#priority` メソッドを実装することで順番を強制することができます。優先度の高いエクステンションが最初に起動されます。"
+msgstr ""
+"複数のカスタム `SecurityIdentityAugmentor` が登録されている場合、それらは同等の候補とみなされ、ランダムな順序で呼び出されます。\n"
+"デフォルトの `SecurityIdentityAugmentor#priority` メソッドを実装することで順番を強制することができます。優先度の高いエクステンションが最初に起動されます。\n"
+"===\n"
 
 #. type: Title ==
 #: upstream/_guides/security-customization.adoc:149
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Custom JAX-RS SecurityContext"
 msgstr "カスタム JAX-RS SecurityContext"
 
 #. type: Plain text
 #: upstream/_guides/security-customization.adoc:152
-#, fuzzy
 msgid "If you use JAX-RS `ContainerRequestFilter` to set a custom JAX-RS `SecurityContext` then make sure `ContainerRequestFilter` runs in the JAX-RS pre-match phase by adding a `@PreMatching` annotation to it for this custom security context to be linked with Quarkus `SecurityIdentity`, for example:"
-msgstr "JAX-RS `ContainerRequestFilter` を使用してカスタム JAX-RS `SecurityContext` を設定する場合は、 `ContainerRequestFilter` が JAX-RS のプレマッチフェーズで実行されていることを確認し、このカスタムセキュリティーコンテキストが Quarkus `SecurityIdentity` とリンクされるように `@PreMatching` アノテーションを追加します。"
+msgstr "JAX-RS `ContainerRequestFilter` を使用してカスタム JAX-RS `SecurityContext` を設定する場合は、 `ContainerRequestFilter` が JAX-RS のプレマッチフェーズで実行されていることを確認し、このカスタムセキュリティーコンテキストが Quarkus `SecurityIdentity` とリンクされるように `@PreMatching` アノテーションを追加します。例:"
 
 #. type: delimited block -
 #: upstream/_guides/security-customization.adoc:156
@@ -383,15 +382,14 @@ msgstr ""
 
 #. type: Title ==
 #: upstream/_guides/security-customization.adoc:203
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Disabling Authorization"
-msgstr "権限の無効化"
+msgstr "認可の無効化"
 
 #. type: Plain text
 #: upstream/_guides/security-customization.adoc:206
-#, fuzzy
 msgid "If you have a good reason to disable the authorization (for example, when testing) then you can register a custom `AuthorizationController`:"
-msgstr "認証を無効にする正当な理由がある場合(テスト時など)は、カスタムの `AuthorizationController` .NET Framework を登録してください。"
+msgstr "認可を無効にする正当な理由がある場合(テスト時など)は、カスタムの `AuthorizationController` を登録してください。"
 
 #. type: delimited block -
 #: upstream/_guides/security-customization.adoc:215
@@ -418,25 +416,24 @@ msgstr ""
 
 #. type: Title ==
 #: upstream/_guides/security-customization.adoc:223
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Registering Security Providers"
 msgstr "セキュリティー プロバイダの登録"
 
 #. type: Title ===
 #: upstream/_guides/security-customization.adoc:225
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Default providers"
 msgstr "デフォルトのプロバイダ"
 
 #. type: Plain text
 #: upstream/_guides/security-customization.adoc:231
-#, fuzzy
 msgid "When running in native mode, the default behavior for GraalVM native executable generation is to only include the main \"SUN\" provider unless you have enabled SSL, in which case all security providers are registered. If you are not using SSL, then you can selectively register security providers by name using the `quarkus.security.security-providers` property. The following example illustrates configuration to register the \"SunRsaSign\" and \"SunJCE\" security providers:"
-msgstr "ネイティブモードで実行している場合、GraalVMネイティブ実行ファイル生成のデフォルトの動作は、SSLを有効にしていない限り、メインの「SUN」プロバイダのみを含めるようになっており、その場合はすべてのセキュリティープロバイダが登録されます。SSLを使用していない場合は、 `quarkus.security.security-providers` プロパティーを使用して、セキュリティープロバイダを名前で選択的に登録することができます。以下の例では、「SunRsaSign」と「SunJCE」のセキュリティープロバイダを登録するための設定を説明します。"
+msgstr "ネイティブモードで実行している場合、GraalVMネイティブ実行ファイル生成のデフォルトの動作は、SSLを有効にしていない限り、メインの「SUN」プロバイダのみを含めるようになっています。SSLを有効にしている場合は、すべてのセキュリティープロバイダが登録されます。SSLを使用していない場合は、 `quarkus.security.security-providers` プロパティーを使用して、セキュリティープロバイダを名前で選択的に登録することができます。以下の例では、「SunRsaSign」と「SunJCE」のセキュリティープロバイダを登録するための設定を説明します。"
 
 #. type: Block title
 #: upstream/_guides/security-customization.adoc:232
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Example Security Providers Configuration"
 msgstr "セキュリティー プロバイダの設定例"
 
@@ -448,19 +445,18 @@ msgstr ""
 
 #. type: Title ===
 #: upstream/_guides/security-customization.adoc:238
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "BouncyCastle"
-msgstr "バウンシーキャッスル"
+msgstr "BouncyCastle"
 
 #. type: Plain text
 #: upstream/_guides/security-customization.adoc:241
-#, fuzzy
 msgid "If you need to register an `org.bouncycastle.jce.provider.BouncyCastleProvider` JCE provider then please set a `BC` provider name:"
 msgstr "`org.bouncycastle.jce.provider.BouncyCastleProvider` JCE プロバイダを登録する必要がある場合は、 `BC` プロバイダ名を設定してください。"
 
 #. type: Block title
 #: upstream/_guides/security-customization.adoc:242
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Example Security Providers BouncyCastle Configuration"
 msgstr "セキュリティープロバイダの例 BouncyCastleの設定"
 
@@ -472,9 +468,8 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/security-customization.adoc:249
-#, fuzzy
 msgid "and add the BouncyCastle provider dependency:"
-msgstr "で、BouncyCastleプロバイダ依存関係を追加します。"
+msgstr "そして、BouncyCastleプロバイダ依存関係を追加します。"
 
 #. type: delimited block -
 #: upstream/_guides/security-customization.adoc:256
@@ -488,19 +483,18 @@ msgstr ""
 
 #. type: Title ===
 #: upstream/_guides/security-customization.adoc:258
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "BouncyCastle JSSE"
-msgstr "バウンシーキャッスルJSSE"
+msgstr "BouncyCastle JSSE"
 
 #. type: Plain text
 #: upstream/_guides/security-customization.adoc:261
-#, fuzzy
 msgid "If you need to register an `org.bouncycastle.jsse.provider.BouncyCastleJsseProvider` JSSE provider and use it instead of the default SunJSSE provider then please set a `BCJSSE` provider name:"
 msgstr "`org.bouncycastle.jsse.provider.BouncyCastleJsseProvider` JSSE プロバイダを登録して、デフォルトの SunJSSE プロバイダの代わりに使用する必要がある場合は、 `BCJSSE` プロバイダ名を設定してください。"
 
 #. type: Block title
 #: upstream/_guides/security-customization.adoc:262
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Example Security Providers BouncyCastle JSSE Configuration"
 msgstr "セキュリティープロバイダの例 BouncyCastle JSSE設定"
 
@@ -529,9 +523,8 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/security-customization.adoc:276
-#, fuzzy
 msgid "and add the BouncyCastle TLS dependency:"
-msgstr "で、BouncyCastleのTLS依存関係を追加します。"
+msgstr "そして、BouncyCastleのTLS依存関係を追加します。"
 
 #. type: delimited block -
 #: upstream/_guides/security-customization.adoc:283
@@ -545,19 +538,18 @@ msgstr ""
 
 #. type: Title ===
 #: upstream/_guides/security-customization.adoc:285
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "BouncyCastle FIPS"
-msgstr "バウンシーキャッスルFIPS"
+msgstr "BouncyCastle FIPS"
 
 #. type: Plain text
 #: upstream/_guides/security-customization.adoc:288
-#, fuzzy
 msgid "If you need to register an `org.bouncycastle.jcajce.provider.BouncyCastleFipsProvider` JCE provider then please set a `BCFIPS` provider name:"
 msgstr "`org.bouncycastle.jcajce.provider.BouncyCastleFipsProvider` JCE プロバイダを登録する必要がある場合は、 `BCFIPS` プロバイダ名を設定してください。"
 
 #. type: Block title
 #: upstream/_guides/security-customization.adoc:289
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Example Security Providers BouncyCastle FIPS Configuration"
 msgstr "セキュリティープロバイダの例 BouncyCastleのFIPS設定"
 
@@ -569,9 +561,8 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/security-customization.adoc:296
-#, fuzzy
 msgid "and add the BouncyCastle FIPS provider dependency:"
-msgstr "で、BouncyCastle FIPSプロバイダの依存関係を追加します。"
+msgstr "そして、BouncyCastle FIPSプロバイダの依存関係を追加します。"
 
 #. type: delimited block -
 #: upstream/_guides/security-customization.adoc:303
@@ -586,19 +577,18 @@ msgstr ""
 
 #. type: Title ===
 #: upstream/_guides/security-customization.adoc:305
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "BouncyCastle JSSE FIPS"
-msgstr "バウンシーキャッスル JSSE FIPS"
+msgstr "BouncyCastle JSSE FIPS"
 
 #. type: Plain text
 #: upstream/_guides/security-customization.adoc:308
-#, fuzzy
 msgid "If you need to register an `org.bouncycastle.jsse.provider.BouncyCastleJsseProvider` JSSE provider and use it in combination with `org.bouncycastle.jcajce.provider.BouncyCastleFipsProvider` instead of the default SunJSSE provider then please set a `BCFIPSJSSE` provider name:"
 msgstr "デフォルトのSunJSSEプロバイダではなく、 `org.bouncycastle.jsse.provider.BouncyCastleJsseProvider` JSSEプロバイダを登録して、 `org.bouncycastle.jcajce.provider.BouncyCastleFipsProvider` と組み合わせて使用する必要がある場合は、 `BCFIPSJSSE` プロバイダ名を設定してください。"
 
 #. type: Block title
 #: upstream/_guides/security-customization.adoc:309
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Example Security Providers BouncyCastle FIPS JSSE Configuration"
 msgstr "セキュリティープロバイダの例 BouncyCastle FIPS JSSE設定"
 
@@ -624,9 +614,8 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/security-customization.adoc:327
-#, fuzzy
 msgid "and the BouncyCastle TLS dependency optimized for using the BouncyCastle FIPS provider:"
-msgstr "と、BouncyCastle FIPSプロバイダを使用するために最適化されたBouncyCastle TLS依存関係。"
+msgstr "そして、BouncyCastle FIPSプロバイダを使用するために最適化されたBouncyCastle TLS依存関係:"
 
 #. type: delimited block -
 #: upstream/_guides/security-customization.adoc:334
@@ -640,7 +629,6 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/security-customization.adoc:343
-#, fuzzy
 msgid "Note that the keystore and truststore type and provider are set to `BCFKS` and `BCFIPS`.  One can generate a keystore with this type and provider like this:"
 msgstr "keystore と truststore のタイプとプロバイダが `BCFKS` と `BCFIPS` に設定されていることに注意してください。このタイプとプロバイダでは、以下のようにキーストアを生成することができます。"
 
@@ -652,13 +640,12 @@ msgstr ""
 
 #. type: Title ==
 #: upstream/_guides/security-customization.adoc:349
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Reactive Security"
-msgstr "リアクティブセキュリティー"
+msgstr "Reactive Security"
 
 #. type: Plain text
 #: upstream/_guides/security-customization.adoc:352
-#, fuzzy
 msgid "If you are going to use security in a reactive environment, you will likely need SmallRye Context Propagation:"
 msgstr "リアクティブな環境でセキュリティーを使用する場合は、SmallRye Context Propagationが必要になるでしょう。"
 
@@ -674,9 +661,8 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/security-customization.adoc:365
-#, fuzzy
 msgid "This will allow you to propagate the identity throughout the reactive callbacks. You also need to make sure you are using an executor that is capable of propagating the identity (e.g. no `CompletableFuture.supplyAsync`), to make sure that Quarkus can propagate it. For more information see the link:context-propagation[Context Propagation Guide]."
-msgstr "これにより、リアクティブコールバック全体にIDを伝播させることができます。また、QuarkusがIDを伝播できるようにするために、IDを伝播できる実行者を使用していることを確認する必要があります(例: `CompletableFuture.supplyAsync` がない)。詳細については、コンテキスト伝搬 link:context-propagation[ガイド] を参照してください。"
+msgstr "これにより、リアクティブコールバック全体にIDを伝播させることができます。また、QuarkusがIDを伝播できるようにするために、IDを伝播できる実行者を使用していることを確認する必要があります(例: `CompletableFuture.supplyAsync` がない)。詳細については、 link:context-propagation[コンテキスト伝搬ガイド] を参照してください。"
 
 #. type: Title ==
 #: upstream/_guides/security-customization.adoc:366
@@ -686,6 +672,5 @@ msgstr "参照"
 
 #. type: Plain text
 #: upstream/_guides/security-customization.adoc:368
-#, fuzzy
 msgid "link:security[Quarkus Security]"
 msgstr "link:security[Quarkusのセキュリティー]"
