--- a/l10n/po/ja_JP/_versions/1.11/guides/security-built-in-authentication.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.11/guides/security-built-in-authentication.adoc.po
@@ -219,17 +219,17 @@ msgstr "これは、公開ページであっても、無効なクレデンシャ
 #. type: Plain text
 #: upstream/_versions/1.11/guides/security-built-in-authentication.adoc:116
 msgid "If you disable proactive authentication then the authentication process will only be run when an identity is requested, either because there are security rules that requires the user to be authenticated, or due to programatic access to the current identity."
-msgstr ""
+msgstr "プロアクティブ認証を無効にすると、認証プロセスは ID が要求されたときにのみ実行されます。これは、ユーザーの認証を必要とするセキュリティー ルールがある場合、または現在の ID へのプログラム的なアクセスがある場合のいずれかです。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/security-built-in-authentication.adoc:124
 msgid "Note that if proactive authentication is in use accessing the `SecurityIdentity` is a blocking operation. This is because authentication may not have happened yet, and accessing it may require calls to external systems such as databases that may block. For blocking applications this is no problem, however if you are have disabled authentication in a reactive application this will fail (as you cannot do blocking operations on the IO thread). To work around this you need to `@Inject` an instance of `io.quarkus.security.identity.CurrentIdentityAssociation`, and call the `Uni<SecurityIdentity> getDeferredIdentity();` method. You can then subscribe to the resulting `Uni` and will be notified when authentication is complete and the identity is available."
-msgstr ""
+msgstr "プロアクティブ認証を使用している場合、 `SecurityIdentity` へのアクセスはブロック操作になることに注意してください。これは、認証がまだ行われていない可能性があるためで、アクセスする際にデータベースなどの外部システムへの呼び出しが必要となり、ブロックされる可能性があるからです。ブロッキングアプリケーションの場合は問題ありませんが、リアクティブアプリケーションで認証を無効にしている場合は失敗します (IO スレッドでブロッキング操作を行うことができないため)。これを回避するには、 `io.quarkus.security.identity.CurrentIdentityAssociation` のインスタンスを `@Inject` し、 `Uni<SecurityIdentity> getDeferredIdentity();` メソッドを呼び出す必要があります。そして、結果として得られる `Uni` を購読し、認証が完了して ID が利用可能になったときに通知を受けることができます。"
 
 #. type: delimited block =
 #: upstream/_versions/1.11/guides/security-built-in-authentication.adoc:129
 msgid "By default the authentication security constraints are enforced before the JAX-RS chain starts.  Disabling the proactive authentication effectively shifts this process to the moment when the JAX-RS chain starts running thus making it possible to use JAX-RS `ExceptionMapper` to capture Quarkus Security authentication exceptions such as `io.quarkus.security.AuthenticationFailedException` if required."
-msgstr ""
+msgstr "デフォルトでは、認証セキュリティー制約は、JAX-RSチェーンが開始される前に適用されます。プロアクティブ認証を無効にすると、このプロセスがJAX-RSチェーンの実行開始時に効果的に移行するため、必要に応じてJAX-RS `ExceptionMapper` を使用して、 `io.quarkus.security.AuthenticationFailedException` などのQuarkus Security認証例外をキャプチャすることが可能になります。"
 
 #. type: Title ==
 #: upstream/_versions/1.11/guides/security-built-in-authentication.adoc:131
