--- a/l10n/po/ja_JP/_versions/1.7/guides/writing-extensions.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.7/guides/writing-extensions.adoc.po
@@ -5458,22 +5458,22 @@ msgstr "これについてのコメントをいくつか。"
 #. type: Plain text
 #: upstream/_versions/1.7/guides/writing-extensions.adoc:2886
 msgid "Every time you will need the indentation to be respected in the Javadoc comment (think list items spread on multiple lines or indented source code), you will need to disable temporarily the automatic Eclipse formatter (this, even if you don't use Eclipse as the formatter is included in our build).  To do so, use the `// @formatter:off`/`// @formatter:on` markers.  Note the fact that they are separate comments and there is a space after the `//` marker. This is required."
-msgstr ""
+msgstr "Javadocのコメントでインデントを尊重する必要がある場合（複数行にまたがるリスト項目やインデントされたソースコードを考えてみてください）には、Eclipseの自動フォーマッタを一時的に無効にする必要があります（これはEclipseを使用していない場合でも同様です。私たちのビルドにはフォーマッタが含まれている為です）。これを行うには、 `// @formatter:off` / `// @formatter:on` マーカーを使用してください。これらは別々のコメントであり、 `//` マーカーの後にスペースがあることに注意してください。これは必須です。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/writing-extensions.adoc:2887
 msgid "As you can see, you can use the full power of Asciidoctor (except for the limitation below)"
-msgstr ""
+msgstr "見ての通り、Asciidoctorのフルパワーが使えます（以下の制限を除く）"
 
 #. type: delimited block =
 #: upstream/_versions/1.7/guides/writing-extensions.adoc:2892
 msgid "You cannot use open blocks (`--`) in your Asciidoctor documentation.  All the other types of blocks (source, admonitions...) are supported."
-msgstr ""
+msgstr "Asciidoctor のドキュメントでは、オープンブロック ( `--` ) を使用することはできません。他のすべてのタイプのブロック (ソース、アドミッション...) がサポートされています。"
 
 #. type: delimited block =
 #: upstream/_versions/1.7/guides/writing-extensions.adoc:2899
 msgid "By default, the doc generator will use the hyphenated field name as the key of a `java.util.Map` configuration item.  To override this default and have a user friendly key (independent of implementation details), you may use the `io.quarkus.runtime.annotations.ConfigDocMapKey` annotation.  See the following example,"
-msgstr ""
+msgstr "デフォルトでは、doc ジェネレータは `java.util.Map` 設定項目のキーとしてハイフンで囲まれたフィールド名を使用します。このデフォルトを上書きして（実装の詳細とは無関係に）ユーザーフレンドリーなキーを持つためには、 `io.quarkus.runtime.annotations.ConfigDocMapKey` アノテーションを使用することができます。以下の例を参照してください。"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/writing-extensions.adoc:2910
@@ -5493,7 +5493,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/writing-extensions.adoc:2913
 msgid "This will generate a configuration map key named `quarkus.some.\"cache-name\"` instead of `quarkus.some.\"namespace\"`."
-msgstr ""
+msgstr "これにより、 `quarkus.some.\"namespace\"` の代わりに `quarkus.some.\"cache-name\"` という名前の設定マップキーが生成されます。"
 
 #. type: Title ===
 #: upstream/_versions/1.7/guides/writing-extensions.adoc:2915
@@ -5591,17 +5591,17 @@ msgstr "例えば、 `io.quarkus.vertx.http.runtime.FormAuthConfig` 設定グル
 #. type: Plain text
 #: upstream/_versions/1.7/guides/writing-extensions.adoc:2964
 msgid "A few recommendations:"
-msgstr ""
+msgstr "幾つかの推奨事項:"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/writing-extensions.adoc:2966
 msgid "`opts=optional` is mandatory as we don't want the build to fail if only part of the configuration documentation has been generated"
-msgstr ""
+msgstr "`opts=optional` は、設定ドキュメントの一部しか生成されていない場合にビルドを失敗させたくないので必須です。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/writing-extensions.adoc:2969
 msgid "The documentation is generated with a title level of 2 (i.e. `==`).  You usually need to adjust it.  It can be done with `leveloffset=+N`."
-msgstr ""
+msgstr "ドキュメントはタイトルレベルが2(例: `==` )で生成されます。通常はこれを調整する必要があります。これは `leveloffset=+N` で行うことが可能です。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/writing-extensions.adoc:2972
@@ -5624,7 +5624,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/writing-extensions.adoc:2982
 msgid "Then, at the end of your documentation, include the extensive documentation:"
-msgstr ""
+msgstr "そして、文書の最後には、エクステンションのドキュメントをインクルードしてください。"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/writing-extensions.adoc:2986
