Apply translation memory

--- a/l10n/po/ja_JP/_versions/1.7/guides/cdi.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.7/guides/cdi.adoc.po
@@ -49,8 +49,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/cdi.adoc:26
+#, fuzzy
 msgid "A: Simply put, you don't control the lifecycle of the object instance directly.  Instead, you can affect the lifecycle through declarative means, such as annotations, configuration, etc.  The container is the _environment_ where your application runs.  It creates and destroys the instances of beans, associates the instances with a designated context, and injects them into other beans."
-msgstr ""
+msgstr "簡単に言えば、オブジェクトインスタンスのライフサイクルを直接制御することはできません。その代わりに、アノテーションや設定などの宣言的な手段でライフサイクルに影響を与えることができます。コンテナーはアプリケーションが動作する _環境_ です。コンテナーは、Beanのインスタンスを作成したり破棄したり、指定されたコンテキストにインスタンスを関連付けたり、他のBeanに注入したりします。"
 
 #. type: Title ==
 #: upstream/_versions/1.7/guides/cdi.adoc:27
@@ -144,8 +145,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/cdi.adoc:70
+#, fuzzy
 msgid "A: That's a good question.  In CDI the process of matching a bean to an injection point is *type-safe*.  Each bean declares a set of bean types.  In our example above, the `Translator` bean has two bean types: `Translator` and `java.lang.Object`.  Subsequently, a bean is assignable to an injection point if the bean has a bean type that matches the _required type_ and has all the _required qualifiers_.  We'll talk about qualifiers later.  For now, it's enough to know that the bean above is assignable to an injection point of type `Translator` and `java.lang.Object`."
-msgstr ""
+msgstr "良い質問ですね。CDIでは、Beanをインジェクションポイントにマッチングするプロセスは *タイプセーフ* です。各Beanは、Beanタイプのセットを宣言します。上の例では、 `Translator` Beanには、 `Translator` と `java.lang.Object` の 2 つのBeanタイプがあります。その後、Beanが _必要な型_ にマッチするBean型を持ち、 _必要な_ すべての _修飾子を_ 持っている場合、Beanはインジェクションポイントに代入可能です。この後、修飾子について説明します。今のところ、上記のBeanが `Translator` と `java.lang.Object` のタイプのインジェクションポイントに代入可能であることを知っていれば十分です。"
 
 #. type: Title ==
 #: upstream/_versions/1.7/guides/cdi.adoc:71
@@ -155,8 +157,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/cdi.adoc:77
+#, fuzzy
 msgid "A: There is a simple rule: *exactly one bean must be assignable to an injection point, otherwise the build fails*.  If none is assignable the build fails with `UnsatisfiedResolutionException`.  If multiple are assignable the build fails with `AmbiguousResolutionException`.  This is very useful because your application fails fast whenever the container is not able to find an unambiguous dependency for any injection point."
-msgstr ""
+msgstr "シンプルなルールがあります: *正確に1つのBeanがインジェクションポイントに割り当て可能でなければならず、そうでなければビルドは失敗します。* 割り当て可能なBeanがない場合、ビルドは `UnsatisfiedResolutionException` で失敗します。複数のBeanが割り当て可能な場合、ビルドは `AmbiguousResolutionException` で失敗します。これは非常に便利です。コンテナーがどのインジェクションポイントに対しても明確な依存関係を見つけることができない場合、アプリケーションは早く失敗するからです。"
 
 #. type: delimited block =
 #: upstream/_versions/1.7/guides/cdi.adoc:81
@@ -274,8 +277,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/cdi.adoc:136
+#, fuzzy
 msgid "A: https://docs.jboss.org/cdi/spec/2.0/cdi-spec.html#qualifiers[Qualifiers, window=\"_blank\"] are annotations that help the container to distinguish beans that implement the same type.  As we already said a bean is assignable to an injection point if it has all the required qualifiers.  If you declare no qualifier at an injection point the `@Default` qualifier is assumed."
-msgstr ""
+msgstr "link:https://docs.jboss.org/cdi/spec/2.0/cdi-spec.html#qualifiers[修飾子, window=\"_blank\"] は、コンテナーが同じ型を実装したBeanを区別するのに役立つアノテーションです。既に述べたように、Beanは必要な修飾子をすべて持っていれば、インジェクションポイントに割り当てることができます。インジェクションポイントで修飾子を宣言しない場合は、 `@Default` の修飾子が想定されます。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/cdi.adoc:138
@@ -370,7 +374,7 @@ msgstr ""
 #: upstream/_versions/1.7/guides/cdi.adoc:180
 #, no-wrap
 msgid "Annotation"
-msgstr ""
+msgstr "アノテーション"
 
 #. type: Table
 #: upstream/_versions/1.7/guides/cdi.adoc:182
@@ -379,66 +383,68 @@ msgid ""
 "Description   \n"
 "//----------------------"
 msgstr ""
+"説明   \n"
+"//----------------------"
 
 #. type: Table
 #: upstream/_versions/1.7/guides/cdi.adoc:182
 #, no-wrap
 msgid "`@javax.enterprise.context.ApplicationScoped`"
-msgstr ""
+msgstr "`@javax.enterprise.context.ApplicationScoped`"
 
 #. type: Table
 #: upstream/_versions/1.7/guides/cdi.adoc:183
 #, no-wrap
 msgid "A single bean instance is used for the application and shared among all injection points. The instance is created lazily, i.e. once a method is invoked upon the <<client_proxies, client proxy>>."
-msgstr ""
+msgstr "単一のBeanインスタンスがアプリケーションに使用され、すべてのインジェクションポイント間で共有されます。 link:#client_proxies[インスタンス] は遅延的に生成されます。"
 
 #. type: Table
 #: upstream/_versions/1.7/guides/cdi.adoc:183
 #, no-wrap
 msgid "`@javax.inject.Singleton`"
-msgstr ""
+msgstr "`@javax.inject.Singleton`"
 
 #. type: Table
 #: upstream/_versions/1.7/guides/cdi.adoc:184
 #, no-wrap
 msgid "Just like `@ApplicationScoped` except that no client proxy is used. The instance is created when an injection point that resolves to a @Singleton bean is being injected."
-msgstr ""
+msgstr "クライアントプロキシーを使用しないことを除いて、 `@ApplicationScoped` と同じです。インスタンスは、@Singleton Beanに解決するインジェクションポイントがインジェクションされたときに生成されます。"
 
 #. type: Table
 #: upstream/_versions/1.7/guides/cdi.adoc:184
 #, no-wrap
 msgid "`@javax.enterprise.context.RequestScoped`"
-msgstr ""
+msgstr "`@javax.enterprise.context.RequestScoped`"
 
 #. type: Table
 #: upstream/_versions/1.7/guides/cdi.adoc:185
 #, no-wrap
 msgid "The bean instance is associated with the current _request_ (usually an HTTP request)."
-msgstr ""
+msgstr "Beanインスタンスは、現在の _リクエスト_ (通常はHTTPリクエスト)に関連付けられています。"
 
 #. type: Table
 #: upstream/_versions/1.7/guides/cdi.adoc:185
 #, no-wrap
 msgid "`@javax.enterprise.context.Dependent`"
-msgstr ""
+msgstr "`@javax.enterprise.context.Dependent`"
 
 #. type: Table
 #: upstream/_versions/1.7/guides/cdi.adoc:186
 #, no-wrap
 msgid "This is a pseudo-scope. The instances are not shared and every injection point spawns a new instance of the dependent bean. The lifecycle of dependent bean is bound to the bean injecting it - it will be created and destroyed along with the bean injecting it."
-msgstr ""
+msgstr "これは疑似スコープです。インスタンスは共有されておらず、すべての注入ポイントは依存Beanの新しいインスタンスをスポーンします。依存Beanのライフサイクルは、それを注入するBeanに拘束されています。"
 
 #. type: Table
 #: upstream/_versions/1.7/guides/cdi.adoc:186
 #, no-wrap
 msgid "`@javax.enterprise.context.SessionScoped`"
-msgstr ""
+msgstr "`@javax.enterprise.context.SessionScoped`"
 
 #. type: Table
 #: upstream/_versions/1.7/guides/cdi.adoc:187
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "This scope is backed by an `javax.servlet.http.HttpSession` object. It's only available if the `quarkus-undertow` extension is used."
-msgstr ""
+msgstr "このスコープは `javax.servlet.http.HttpSession` オブジェクトによってバックアップされています。 `quarkus-undertow` エクステンションを使用している場合のみ利用可能です。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/cdi.adoc:190
