--- a/l10n/po/ja_JP/_versions/1.11/guides/resteasy-reactive.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.11/guides/resteasy-reactive.adoc.po
@@ -351,7 +351,7 @@ msgstr ""
 #: upstream/_versions/1.11/guides/resteasy-reactive.adoc:222
 #, no-wrap
 msgid "Annotation"
-msgstr ""
+msgstr "アノテーション"
 
 #. type: Table
 #: upstream/_versions/1.11/guides/resteasy-reactive.adoc:134
