--- a/l10n/po/ja_JP/_versions/1.11/guides/security-customization.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.11/guides/security-customization.adoc.po
@@ -34,7 +34,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/security-customization.adoc:14
 msgid "One can customize `HttpAuthenticationMechanism` by registering a CDI implementation bean.  In the example below the custom authenticator delegates to `JWTAuthMechanism` provided by `quarkus-smallrye-jwt`:"
-msgstr ""
+msgstr "CDI実装Beanを登録することで、 `HttpAuthenticationMechanism` をカスタマイズすることができます。以下の例では、カスタム認証機能は `quarkus-smallrye-jwt` によって提供される `JWTAuthMechanism` にデリゲートします。"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/security-customization.adoc:21
@@ -111,12 +111,12 @@ msgstr ""
 #: upstream/_versions/1.11/guides/security-customization.adoc:52
 #, no-wrap
 msgid "Security Identity Customization"
-msgstr ""
+msgstr "セキュリティー・アイデンティティのカスタマイズ"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/security-customization.adoc:55
 msgid "Internally, the identity providers create and update an instance of the `io.quarkus.security.identity.SecurityIdentity` class which holds the principal, roles, credentials which were used to authenticate the client (user) and other security attributes. An easy option to customize `SecurityIdentity` is to register a custom `SecurityIdentityAugmentor`. For example, the augmentor below adds an addition role:"
-msgstr ""
+msgstr "内部的には、アイデンティティ・プロバイダは、プリンシパル、役割、クライアント(ユーザー)の認証に使用されたクレデンシャル、 およびその他のセキュリティー属性を保持する `io.quarkus.security.identity.SecurityIdentity` クラスのインスタンスを作成して更新します。 `SecurityIdentity` をカスタマイズする簡単なオプションは、カスタム `SecurityIdentityAugmentor` を登録することです。例えば、以下のエクステンションは、追加のロールを追加します。"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/security-customization.adoc:63
@@ -191,7 +191,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/security-customization.adoc:94
 msgid "Here is another example showing how to use the client certificate available in the current link:security-built-in-authentication#mutual-tls[Mutual TLS] request to add more roles:"
-msgstr ""
+msgstr "ここでは、現在の link:security-built-in-authentication#mutual-tls[相互TLS] リクエストで利用可能なクライアント証明書を使用して、より多くのロールを追加する方法を示すもう一つの例を示します。"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/security-customization.adoc:104
@@ -284,17 +284,20 @@ msgid ""
 "You can enforce the order by implementing a default `SecurityIdentityAugmentor#priority` method. Augmentors with higher priorities will be invoked first.\n"
 "===\n"
 msgstr ""
+"複数のカスタム `SecurityIdentityAugmentor` が登録されている場合、それらは同等の候補とみなされ、ランダムな順序で呼び出されます。\n"
+"デフォルトの `SecurityIdentityAugmentor#priority` メソッドを実装することで順番を強制することができます。優先度の高いエクステンションが最初に起動されます。\n"
+"===\n"
 
 #. type: Title ==
 #: upstream/_versions/1.11/guides/security-customization.adoc:149
 #, no-wrap
 msgid "Custom JAX-RS SecurityContext"
-msgstr ""
+msgstr "カスタム JAX-RS SecurityContext"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/security-customization.adoc:152
 msgid "If you use JAX-RS `ContainerRequestFilter` to set a custom JAX-RS `SecurityContext` then make sure `ContainerRequestFilter` runs in the JAX-RS pre-match phase by adding a `@PreMatching` annotation to it for this custom security context to be linked with Quarkus `SecurityIdentity`, for example:"
-msgstr ""
+msgstr "JAX-RS `ContainerRequestFilter` を使用してカスタム JAX-RS `SecurityContext` を設定する場合は、 `ContainerRequestFilter` が JAX-RS のプレマッチフェーズで実行されていることを確認し、このカスタムセキュリティーコンテキストが Quarkus `SecurityIdentity` とリンクされるように `@PreMatching` アノテーションを追加します。例:"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/security-customization.adoc:156
@@ -381,12 +384,12 @@ msgstr ""
 #: upstream/_versions/1.11/guides/security-customization.adoc:203
 #, no-wrap
 msgid "Disabling Authorization"
-msgstr ""
+msgstr "認可の無効化"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/security-customization.adoc:206
 msgid "If you have a good reason to disable the authorization (for example, when testing) then you can register a custom `AuthorizationController`:"
-msgstr ""
+msgstr "認可を無効にする正当な理由がある場合(テスト時など)は、カスタムの `AuthorizationController` を登録してください。"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/security-customization.adoc:215
@@ -415,24 +418,24 @@ msgstr ""
 #: upstream/_versions/1.11/guides/security-customization.adoc:223
 #, no-wrap
 msgid "Registering Security Providers"
-msgstr ""
+msgstr "セキュリティー プロバイダの登録"
 
 #. type: Title ===
 #: upstream/_versions/1.11/guides/security-customization.adoc:225
 #, no-wrap
 msgid "Default providers"
-msgstr ""
+msgstr "デフォルトのプロバイダ"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/security-customization.adoc:231
 msgid "When running in native mode, the default behavior for GraalVM native executable generation is to only include the main \"SUN\" provider unless you have enabled SSL, in which case all security providers are registered. If you are not using SSL, then you can selectively register security providers by name using the `quarkus.security.security-providers` property. The following example illustrates configuration to register the \"SunRsaSign\" and \"SunJCE\" security providers:"
-msgstr ""
+msgstr "ネイティブモードで実行している場合、GraalVMネイティブ実行ファイル生成のデフォルトの動作は、SSLを有効にしていない限り、メインの「SUN」プロバイダのみを含めるようになっています。SSLを有効にしている場合は、すべてのセキュリティープロバイダが登録されます。SSLを使用していない場合は、 `quarkus.security.security-providers` プロパティーを使用して、セキュリティープロバイダを名前で選択的に登録することができます。以下の例では、「SunRsaSign」と「SunJCE」のセキュリティープロバイダを登録するための設定を説明します。"
 
 #. type: Block title
 #: upstream/_versions/1.11/guides/security-customization.adoc:232
 #, no-wrap
 msgid "Example Security Providers Configuration"
-msgstr ""
+msgstr "セキュリティー プロバイダの設定例"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/security-customization.adoc:236
@@ -444,18 +447,18 @@ msgstr ""
 #: upstream/_versions/1.11/guides/security-customization.adoc:238
 #, no-wrap
 msgid "BouncyCastle"
-msgstr ""
+msgstr "BouncyCastle"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/security-customization.adoc:241
 msgid "If you need to register an `org.bouncycastle.jce.provider.BouncyCastleProvider` JCE provider then please set a `BC` provider name:"
-msgstr ""
+msgstr "`org.bouncycastle.jce.provider.BouncyCastleProvider` JCE プロバイダを登録する必要がある場合は、 `BC` プロバイダ名を設定してください。"
 
 #. type: Block title
 #: upstream/_versions/1.11/guides/security-customization.adoc:242
 #, no-wrap
 msgid "Example Security Providers BouncyCastle Configuration"
-msgstr ""
+msgstr "セキュリティープロバイダの例 BouncyCastleの設定"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/security-customization.adoc:246
@@ -466,7 +469,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/security-customization.adoc:249
 msgid "and add the BouncyCastle provider dependency:"
-msgstr ""
+msgstr "そして、BouncyCastleプロバイダ依存関係を追加します。"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/security-customization.adoc:256
@@ -482,18 +485,18 @@ msgstr ""
 #: upstream/_versions/1.11/guides/security-customization.adoc:258
 #, no-wrap
 msgid "BouncyCastle JSSE"
-msgstr ""
+msgstr "BouncyCastle JSSE"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/security-customization.adoc:261
 msgid "If you need to register an `org.bouncycastle.jsse.provider.BouncyCastleJsseProvider` JSSE provider and use it instead of the default SunJSSE provider then please set a `BCJSSE` provider name:"
-msgstr ""
+msgstr "`org.bouncycastle.jsse.provider.BouncyCastleJsseProvider` JSSE プロバイダを登録して、デフォルトの SunJSSE プロバイダの代わりに使用する必要がある場合は、 `BCJSSE` プロバイダ名を設定してください。"
 
 #. type: Block title
 #: upstream/_versions/1.11/guides/security-customization.adoc:262
 #, no-wrap
 msgid "Example Security Providers BouncyCastle JSSE Configuration"
-msgstr ""
+msgstr "セキュリティープロバイダの例 BouncyCastle JSSE設定"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/security-customization.adoc:266
@@ -521,7 +524,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/security-customization.adoc:276
 msgid "and add the BouncyCastle TLS dependency:"
-msgstr ""
+msgstr "そして、BouncyCastleのTLS依存関係を追加します。"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/security-customization.adoc:283
@@ -537,18 +540,18 @@ msgstr ""
 #: upstream/_versions/1.11/guides/security-customization.adoc:285
 #, no-wrap
 msgid "BouncyCastle FIPS"
-msgstr ""
+msgstr "BouncyCastle FIPS"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/security-customization.adoc:288
 msgid "If you need to register an `org.bouncycastle.jcajce.provider.BouncyCastleFipsProvider` JCE provider then please set a `BCFIPS` provider name:"
-msgstr ""
+msgstr "`org.bouncycastle.jcajce.provider.BouncyCastleFipsProvider` JCE プロバイダを登録する必要がある場合は、 `BCFIPS` プロバイダ名を設定してください。"
 
 #. type: Block title
 #: upstream/_versions/1.11/guides/security-customization.adoc:289
 #, no-wrap
 msgid "Example Security Providers BouncyCastle FIPS Configuration"
-msgstr ""
+msgstr "セキュリティープロバイダの例 BouncyCastleのFIPS設定"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/security-customization.adoc:293
@@ -559,7 +562,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/security-customization.adoc:296
 msgid "and add the BouncyCastle FIPS provider dependency:"
-msgstr ""
+msgstr "そして、BouncyCastle FIPSプロバイダの依存関係を追加します。"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/security-customization.adoc:303
@@ -576,18 +579,18 @@ msgstr ""
 #: upstream/_versions/1.11/guides/security-customization.adoc:305
 #, no-wrap
 msgid "BouncyCastle JSSE FIPS"
-msgstr ""
+msgstr "BouncyCastle JSSE FIPS"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/security-customization.adoc:308
 msgid "If you need to register an `org.bouncycastle.jsse.provider.BouncyCastleJsseProvider` JSSE provider and use it in combination with `org.bouncycastle.jcajce.provider.BouncyCastleFipsProvider` instead of the default SunJSSE provider then please set a `BCFIPSJSSE` provider name:"
-msgstr ""
+msgstr "デフォルトのSunJSSEプロバイダではなく、 `org.bouncycastle.jsse.provider.BouncyCastleJsseProvider` JSSEプロバイダを登録して、 `org.bouncycastle.jcajce.provider.BouncyCastleFipsProvider` と組み合わせて使用する必要がある場合は、 `BCFIPSJSSE` プロバイダ名を設定してください。"
 
 #. type: Block title
 #: upstream/_versions/1.11/guides/security-customization.adoc:309
 #, no-wrap
 msgid "Example Security Providers BouncyCastle FIPS JSSE Configuration"
-msgstr ""
+msgstr "セキュリティープロバイダの例 BouncyCastle FIPS JSSE設定"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/security-customization.adoc:313
@@ -627,7 +630,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/security-customization.adoc:343
 msgid "Note that the keystore and truststore type and provider are set to `BCFKS` and `BCFIPS`.  One can generate a keystore with this type and provider like this:"
-msgstr ""
+msgstr "keystore と truststore のタイプとプロバイダが `BCFKS` と `BCFIPS` に設定されていることに注意してください。このタイプとプロバイダでは、以下のようにキーストアを生成することができます。"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/security-customization.adoc:347
@@ -639,12 +642,12 @@ msgstr ""
 #: upstream/_versions/1.11/guides/security-customization.adoc:349
 #, no-wrap
 msgid "Reactive Security"
-msgstr ""
+msgstr "Reactive Security"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/security-customization.adoc:352
 msgid "If you are going to use security in a reactive environment, you will likely need SmallRye Context Propagation:"
-msgstr ""
+msgstr "リアクティブな環境でセキュリティーを使用する場合は、SmallRye Context Propagationが必要になるでしょう。"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/security-customization.adoc:359
@@ -659,7 +662,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/security-customization.adoc:365
 msgid "This will allow you to propagate the identity throughout the reactive callbacks. You also need to make sure you are using an executor that is capable of propagating the identity (e.g. no `CompletableFuture.supplyAsync`), to make sure that Quarkus can propagate it. For more information see the link:context-propagation[Context Propagation Guide]."
-msgstr ""
+msgstr "これにより、リアクティブコールバック全体にIDを伝播させることができます。また、QuarkusがIDを伝播できるようにするために、IDを伝播できる実行者を使用していることを確認する必要があります(例: `CompletableFuture.supplyAsync` がない)。詳細については、 link:context-propagation[コンテキスト伝搬ガイド] を参照してください。"
 
 #. type: Title ==
 #: upstream/_versions/1.11/guides/security-customization.adoc:366
