--- a/l10n/po/ja_JP/_versions/1.7/guides/security-customization.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.7/guides/security-customization.adoc.po
@@ -34,7 +34,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/security-customization.adoc:14
 msgid "One can customize `HttpAuthenticationMechanism` by registering a CDI implementation bean.  In the example below the custom authenticator delegates to `JWTAuthMechanism` provided by `quarkus-smallrye-jwt`:"
-msgstr ""
+msgstr "CDI実装Beanを登録することで、 `HttpAuthenticationMechanism` をカスタマイズすることができます。以下の例では、カスタム認証機能は `quarkus-smallrye-jwt` によって提供される `JWTAuthMechanism` にデリゲートします。"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/security-customization.adoc:21
@@ -111,12 +111,12 @@ msgstr ""
 #: upstream/_versions/1.7/guides/security-customization.adoc:52
 #, no-wrap
 msgid "Security Identity Customization"
-msgstr ""
+msgstr "セキュリティー・アイデンティティのカスタマイズ"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/security-customization.adoc:55
 msgid "Internally, the identity providers create and update an instance of the `io.quarkus.security.identity.SecurityIdentity` class which holds the principal, roles, credentials which were used to authenticate the client (user) and other security attributes. An easy option to customize `SecurityIdentity` is to register a custom `SecurityIdentityAugmentor`. For example, the augmentor below adds an addition role:"
-msgstr ""
+msgstr "内部的には、アイデンティティ・プロバイダは、プリンシパル、役割、クライアント(ユーザー)の認証に使用されたクレデンシャル、 およびその他のセキュリティー属性を保持する `io.quarkus.security.identity.SecurityIdentity` クラスのインスタンスを作成して更新します。 `SecurityIdentity` をカスタマイズする簡単なオプションは、カスタム `SecurityIdentityAugmentor` を登録することです。例えば、以下のエクステンションは、追加のロールを追加します。"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/security-customization.adoc:63
@@ -202,7 +202,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/security-customization.adoc:99
 msgid "Here is another example showing how to use the client certificate available in the current link:security-built-in-authentication#mutual-tls[Mutual TLS] request to add more roles:"
-msgstr ""
+msgstr "ここでは、現在の link:security-built-in-authentication#mutual-tls[相互TLS] リクエストで利用可能なクライアント証明書を使用して、より多くのロールを追加する方法を示すもう一つの例を示します。"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/security-customization.adoc:109
@@ -285,12 +285,12 @@ msgstr ""
 #: upstream/_versions/1.7/guides/security-customization.adoc:153
 #, no-wrap
 msgid "Custom JAX-RS SecurityContext"
-msgstr ""
+msgstr "カスタム JAX-RS SecurityContext"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/security-customization.adoc:156
 msgid "If you use JAX-RS `ContainerRequestFilter` to set a custom JAX-RS `SecurityContext` then make sure `ContainerRequestFilter` runs in the JAX-RS pre-match phase by adding a `@PreMatching` annotation to it for this custom security context to be linked with Quarkus `SecurityIdentity`, for example:"
-msgstr ""
+msgstr "JAX-RS `ContainerRequestFilter` を使用してカスタム JAX-RS `SecurityContext` を設定する場合は、 `ContainerRequestFilter` が JAX-RS のプレマッチフェーズで実行されていることを確認し、このカスタムセキュリティーコンテキストが Quarkus `SecurityIdentity` とリンクされるように `@PreMatching` アノテーションを追加します。例:"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/security-customization.adoc:160
@@ -377,12 +377,12 @@ msgstr ""
 #: upstream/_versions/1.7/guides/security-customization.adoc:207
 #, no-wrap
 msgid "Disabling Authorization"
-msgstr ""
+msgstr "認可の無効化"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/security-customization.adoc:210
 msgid "If you have a good reason to disable the authorization (for example, when testing) then you can register a custom `AuthorizationController`:"
-msgstr ""
+msgstr "認可を無効にする正当な理由がある場合(テスト時など)は、カスタムの `AuthorizationController` を登録してください。"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/security-customization.adoc:219
@@ -411,18 +411,18 @@ msgstr ""
 #: upstream/_versions/1.7/guides/security-customization.adoc:227
 #, no-wrap
 msgid "Registering Security Providers"
-msgstr ""
+msgstr "セキュリティー プロバイダの登録"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/security-customization.adoc:233
 msgid "When running in native mode, the default behavior for GraalVM native executable generation is to only include the main \"SUN\" provider unless you have enabled SSL, in which case all security providers are registered. If you are not using SSL, then you can selectively register security providers by name using the `quarkus.security.security-providers` property. The following example illustrates configuration to register the \"SunRsaSign\" and \"SunJCE\" security providers:"
-msgstr ""
+msgstr "ネイティブモードで実行している場合、GraalVMネイティブ実行ファイル生成のデフォルトの動作は、SSLを有効にしていない限り、メインの「SUN」プロバイダのみを含めるようになっています。SSLを有効にしている場合は、すべてのセキュリティープロバイダが登録されます。SSLを使用していない場合は、 `quarkus.security.security-providers` プロパティーを使用して、セキュリティープロバイダを名前で選択的に登録することができます。以下の例では、「SunRsaSign」と「SunJCE」のセキュリティープロバイダを登録するための設定を説明します。"
 
 #. type: Block title
 #: upstream/_versions/1.7/guides/security-customization.adoc:234
 #, no-wrap
 msgid "Example Security Providers Configuration"
-msgstr ""
+msgstr "セキュリティー プロバイダの設定例"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/security-customization.adoc:238
@@ -434,12 +434,12 @@ msgstr ""
 #: upstream/_versions/1.7/guides/security-customization.adoc:240
 #, no-wrap
 msgid "Reactive Security"
-msgstr ""
+msgstr "Reactive Security"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/security-customization.adoc:243
 msgid "If you are going to use security in a reactive environment, you will likely need SmallRye Context Propagation:"
-msgstr ""
+msgstr "リアクティブな環境でセキュリティーを使用する場合は、SmallRye Context Propagationが必要になるでしょう。"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/security-customization.adoc:250
@@ -454,7 +454,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/security-customization.adoc:256
 msgid "This will allow you to propagate the identity throughout the reactive callbacks. You also need to make sure you are using an executor that is capable of propagating the identity (e.g. no `CompletableFuture.supplyAsync`), to make sure that Quarkus can propagate it. For more information see the link:context-propagation[Context Propagation Guide]."
-msgstr ""
+msgstr "これにより、リアクティブコールバック全体にIDを伝播させることができます。また、QuarkusがIDを伝播できるようにするために、IDを伝播できる実行者を使用していることを確認する必要があります(例: `CompletableFuture.supplyAsync` がない)。詳細については、 link:context-propagation[コンテキスト伝搬ガイド] を参照してください。"
 
 #. type: Title ==
 #: upstream/_versions/1.7/guides/security-customization.adoc:257
