--- a/l10n/po/ja_JP/_posts/2021-03-11-ja-quarkus-io.adoc.po
+++ b/l10n/po/ja_JP/_posts/2021-03-11-ja-quarkus-io.adoc.po
@@ -45,7 +45,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_posts/2021-03-11-ja-quarkus-io.adoc:11
 msgid "Today we're proud to announce our quarkus.io Japanese localization site (https://ja.quarkus.io[https://ja.quarkus.io]) is now open. It is where our valuable guides and blog entries are translated."
-msgstr "本日、quarkus.io日本語版サイト (https://ja.quarkus.io[https://ja.quarkus.io]) が公開されましたことをお知らせします。ここでは、Quarkusの貴重なガイドや、ブログエントリの翻訳が公開されます。"
+msgstr "本日、quarkus.io日本語版サイト (https://ja.quarkus.io[https://ja.quarkus.io]) が公開されましたことをお知らせします。ここでは、Quarkusの価値あるガイドや、ブログエントリの翻訳が公開されます。"
 
 #. type: Target for macro image
 #: upstream/_posts/2021-03-11-ja-quarkus-io.adoc:12
