Apply translation memory

--- a/l10n/po/ja_JP/_versions/1.11/guides/amazon-kms.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.11/guides/amazon-kms.adoc.po
@@ -121,7 +121,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/amazon-kms.adoc:49
 msgid "Create an AWS profile for your local instance using AWS CLI:"
-msgstr ""
+msgstr "AWS CLIを使ってローカルインスタンスのAWSプロファイルを作成します。"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/amazon-kms.adoc:56
@@ -363,7 +363,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/amazon-kms.adoc:177
 msgid "If you want to use Apache HTTP client instead, configure it as follows:"
-msgstr ""
+msgstr "代わりにApache HTTPクライアントを使用したい場合は、以下のように設定します。"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/amazon-kms.adoc:180
