--- a/l10n/po/ja_JP/_versions/1.7/guides/rest-client-multipart.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.7/guides/rest-client-multipart.adoc.po
@@ -118,7 +118,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/rest-client-multipart.adoc:52
 msgid "Then, we'll add the following dependency to support `multipart/form-data` requests:"
-msgstr ""
+msgstr "そして、 `multipart/form-data` リクエストをサポートするために、以下の依存関係を追加します。"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/rest-client-multipart.adoc:59
