--- a/l10n/po/ja_JP/_versions/1.11/guides/amazon-ses.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.11/guides/amazon-ses.adoc.po
@@ -32,8 +32,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/amazon-ses.adoc:16
+#, fuzzy
 msgid "The SES extension is based on https://docs.aws.amazon.com/sdk-for-java/v2/developer-guide/welcome.html[AWS Java SDK 2.x].  It's a major rewrite of the 1.x code base that offers two programming models (Blocking & Async)."
-msgstr ""
+msgstr "S3 エクステンションは link:https://docs.aws.amazon.com/sdk-for-java/v2/developer-guide/welcome.html[AWS Java SDK 2.x] をベースにしており、2つのプログラミングモデル(Blocking & Async)を提供する1.xのコードベースを大幅に書き換えています。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/amazon-ses.adoc:20
@@ -116,7 +117,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/amazon-ses.adoc:48
 msgid "Create an AWS profile for your local instance using AWS CLI:"
-msgstr ""
+msgstr "AWS CLIを使ってローカルインスタンスのAWSプロファイルを作成します。"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/amazon-ses.adoc:55
@@ -342,7 +343,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/amazon-ses.adoc:169
 msgid "If you want to use Apache HTTP client instead, configure it as follows:"
-msgstr ""
+msgstr "代わりにApache HTTPクライアントを使用したい場合は、以下のように設定します。"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/amazon-ses.adoc:172
